# cheatengine-mcp-rs

./: .gitignore  .mcp.json  Cargo.toml  README.md
bridge/: ce_mcp_bridge.lua
docs/: design-spec.md  handover.md  implementation-plan.md  tool-review.md
src/: main.rs  pipe.rs  tools.rs
