[package]
name = "ce-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "Rust MCP server for Cheat Engine — async named pipe with proper timeouts"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
